[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nex"
version = "0.1.0"
description = "PRUDP/NEX library written in Python. "
authors = [
    { name = "Link-3DS Contributors", email = "contact@link3ds.com" }
]
readme = "README.md"
requires-python = ">=3.6"
dependencies = []

[project.urls]
Homepage = "https://github.com/Link-3DS/nex"